[package]
name = "ccs-rs"
version = "0.2.5"
edition = "2024"
description = "A fast CLI launcher for Claude Code and Codex with interactive provider selection"
license = "MIT"
repository = "https://github.com/xuzhu-591/ccs"
keywords = ["cli", "claude", "codex", "launcher"]
categories = ["command-line-utilities"]

[[bin]]
name = "ccs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
